--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -604,5 +604,8 @@
     "Password updated successfully": "Password updated successfully",
     "Update settings": "Update settings",
     "Scan the QR code to enable 2FA": "Scan the QR code to enable 2FA",
-    "QR code for 2FA": "QR code for 2FA"
+    "QR code for 2FA": "QR code for 2FA",
+    "Loading courses. Please wait.": "Loading courses. Please wait.",
+    "Private course": "Private course",
+    "Not subscribed": "Not subscribed"
 }
