--- a/translations/messages.pot
+++ b/translations/messages.pot
@@ -28013,3 +28013,6 @@ msgstr ""
 
 msgid "Not subscribed"
 msgstr ""
+
+msgid "Session coaches are coordinators for the session and can act as tutor for each of the course in the session. Only users with the teacher role can be selected as session coach."
+msgstr ""
