--- a/translations/messages.pot
+++ b/translations/messages.pot
@@ -15223,22 +15223,22 @@ msgstr ""
 msgid "Dashboard plugins"
 msgstr ""
 
-msgid "This plugin has been deleted from the dashboard plugin directory"
+msgid "This plugin has been deleted from the Dashboard plugin directory"
 msgstr ""
 
-msgid "Enable dashboard plugins"
+msgid "Enable Dashboard plugins"
 msgstr ""
 
-msgid "Select blocks to display in the dashboard blocks view"
+msgid "Select blocks to display in the Dashboard blocks view"
 msgstr ""
 
 msgid "Position (column)"
 msgstr ""
 
-msgid "Enable dashboard block"
+msgid "Enable Dashboard block"
 msgstr ""
 
-msgid "There is no enabled dashboard plugin"
+msgid "There is no enabled Dashboard plugin"
 msgstr ""
 
 msgid "Enabled"
@@ -15364,7 +15364,7 @@ msgstr ""
 msgid "You do not have attendances"
 msgstr ""
 
-msgid "The dashboard plugins have been updated successfully"
+msgid "The Dashboard plugins have been updated successfully"
 msgstr ""
 
 msgid "There is no available information about your courses"
