--- a/translations/messages.zh_CN.po
+++ b/translations/messages.zh_CN.po
@@ -15224,22 +15224,22 @@ msgstr "卡片已更新"
 msgid "Dashboard plugins"
 msgstr "资料卡插件"
 
-msgid "This plugin has been deleted from the dashboard plugin directory"
+msgid "This plugin has been deleted from the Dashboard plugin directory"
 msgstr ""
 
-msgid "Enable dashboard plugins"
+msgid "Enable Dashboard plugins"
 msgstr ""
 
-msgid "Select blocks to display in the dashboard blocks view"
+msgid "Select blocks to display in the Dashboard blocks view"
 msgstr "选择需要查看的内容"
 
 msgid "Position (column)"
 msgstr "位置 (列)"
 
-msgid "Enable dashboard block"
+msgid "Enable Dashboard block"
 msgstr "允许的资料卡"
 
-msgid "There is no enabled dashboard plugin"
+msgid "There is no enabled Dashboard plugin"
 msgstr ""
 
 msgid "Enabled"
@@ -15365,7 +15365,7 @@ msgstr ""
 msgid "You do not have attendances"
 msgstr ""
 
-msgid "The dashboard plugins have been updated successfully"
+msgid "The Dashboard plugins have been updated successfully"
 msgstr ""
 
 msgid "There is no available information about your courses"
